resolved an issue with the background of the menu on mobile

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -69,6 +69,9 @@
 }
 
 .open-menu .header {
+  .logo {
+    display: none;
+  }
   @media only screen and (max-width: 1300px) {
     height: 100%;
   }
@@ -105,7 +108,6 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    background: $background;
     visibility: hidden;
     opacity: 0;
     z-index: 10;
@@ -248,9 +250,12 @@
   }
 }
 
+.gallery, .banner {
+  padding-top: 121px;
+}
+
 .banner {
   width: 100%;
-  padding-top: 121px;
   &__img-container {
     width: 100%;
     padding-bottom: 33.3333%;
